# Oracle_Solver

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  PRD.txt  README.md
.claude/docs/: architectural_patterns.md
cli/: Cargo.toml
cli/src/: main.rs
docs/: BENCHMARKS.md  EXPLOITABILITY.md  MEMORY_LAYOUT.md
engine/: Cargo.toml
engine/benches/: hand_evaluator.rs  memory_layout.rs  solver_performance.rs
engine/src/: .gitignore  cfr.rs  evaluator.rs  exploitability.rs  lib.rs  node.rs  test_tree.rs
tree/: Cargo.toml
tree/src/: lib.rs
