[package]
name = "oracle-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "oracle_engine"
path = "src/lib.rs"

[dependencies]
# Engine has no external dependencies in Phase 0

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "memory_layout"
harness = false
