[package]
name = "oracle-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "oracle_engine"
path = "src/lib.rs"

[dependencies]
rayon = "1.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "memory_layout"
harness = false

[[bench]]
name = "hand_evaluator"
harness = false

[[bench]]
name = "solver_performance"
harness = false
